--- a/src/app/weather.html
+++ b/src/app/weather.html
@@ -1,12 +1,12 @@
 <div id='weather' ng-app="weather">
-    <md-button class="md-primary" ng-click="$ctrl.update();"> Accept </md-button>
-    <h1>The weather in {{$ctrl.cityName}} is {{$ctrl.hello}}: </h1>
+    <md-button class="md-primary" ng-click="$ctrl.update();"> Get New Data </md-button>
     <md-list>
         <md-list-item class="md-primary" ng-repeat="forecast in $ctrl.weatherList.list">
                 <img class= "md-avatar" ng-src={{forecast.image}} alt={{forecast.image}}>
                 <div class="md-list-item-text" layout="column">
+                    <div ng-test></div>
                     <h3>Max: {{forecast.temp.max | number: 0}}</h3>
-                    <h4>Min: {{forecast.temp.min | number: 0}}</h4>
+                    <h3>Min: {{forecast.temp.min | number: 0}}</h4>
                     <md-divider></md-divider>
                 </div>
         </md-list-item>
